# skse_plugin_template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  skse_plugin_template.cpp  skse_plugin_template.h  vcpkg-configuration.json  vcpkg.json
include/: EventAggregator.hpp  PCH.h  event_aggregator.hpp  logger.hpp
src/: plugin.cpp
tests/: CMakeLists.txt  EventAggregator.tests.cpp  event_aggregator.tests.cpp
tools/: CMakeLists.txt  template.json.in
tools/EspGenerator/: EspGenerator.csproj  Program.cs  Program.cs.in  SynthesisMeta.json
